--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -13,21 +13,21 @@ Removals:
 Composition Data: 
 
 - Length and age composition data were added from 2017 - 2024 for all states for the commercial and recreational fleets. 
-- Length and age composition data were also extended for the NWFSC West Coast Groundfish Bottom Trawl Survey (WCGBTS) and the IPHC Longline survey.
+- Length and age composition data were also extended for the West Coast Groundfish Bottom Trawl Survey (WCGBTS) and the IPHC Longline survey.
 - Some length and age composition data from the 2017 assessment had minor errors in how sample numbers were calculated, ageing error assignment, and doubled age samples and thus needed to be fixed. See @sec-fd_comps below.   
 
 Indices of Abundance: 
 
--Indices that were updated with more recent data and/or updated methodology include: 
-    -Oregon Onboard Observer (2001 - 2024) 
-    -Oregon ORBS Dockside (release only) (2004-2024)
-    -WCGBTS (2003 - 2024)
-    -IPHC Longline Survey (2002 - 2024)
+- Indices that were updated with more recent data and/or updated methodology include: 
+    - Oregon Onboard Observer (2001 - 2024) 
+    - Oregon ORBS Dockside (release only) (2004-2024)
+    - WCGBTS (2003 - 2024)
+    - IPHC Longline Survey (2002 - 2024)
 
 Biological Data: 
 
 - Length-weight relationship parameters were updated to include all the recent (2017 - 2024) fishery-independent data.
-- Ageing error matrices were unchanged but some Oregon recreational ages were assigned the wrong ageing error and were corrected based on ODFW recommendations. 
+- Ageing error matrices were unchanged but some Oregon recreation ages were assigned the wrong ageing error and were corrected based on ODFW recommendations. 
 
 ## Fishery-Dependent Data 
 
@@ -39,11 +39,11 @@ Updated fishery-dependent data, including removals, length and age compositions,
 
 A summary of total removals are provided in @tbl-all_removals and @fig-catch.
 
-Recent commercial landings (2017-2024) were obtained from [PacFIN](www.pacfin.psmfc.org) for California, Oregon and Washington. As the previous assessment, for the period from 2016 through 2023, updated West Coast Groundfish Observer Program (WCGOP) discard estimates were added to PacFIN landings by adding the annual dead discard mortality estimates for the commercial sector in the Groundish Expanded Mortality Multi-year (GEMM) recorded discards to obtain the total catch of Yelloweye Rockfish within commercial fleets. 
+Recent commercial landings (2017-2024) were obtained from [PacFIN](www.pacfin.psmfc.org) for California, Oregon and Washington. For the period from 2016 through 2023, updated West Coast Groundfish Observer Program (WCGOP) discard estimates were added to PacFIN landings by adding the annual dead discard mortality rate for the commercial sector in the Groundfish Expanded Mortality Multi-year (GEMM) recorded discards to obtain the total catch of Yelloweye Rockfish within commercial fleets. 
 
 Bycatch for the At-Sea Pacific Hake fleet (A-SHOP) was updated from 2017 through 2024.
 
-Recreational removals from [RecFIN](www.recfin.org) were updated for California, Oregon and Washington from 2017 - 2024. RecFIN removals include an estimate of discard mortality and represent total estimated removals. Updated historical recreational removals for Oregon from 1979 through 2000 were provided by Oregon Department of Fish and Wildlife (ODFW,[@Whitman_2024]). Washington Department of Fish and Wildlife (WDFW) provided updated historical recreational removals (1967-1989) and WDFW Ocean Sampling Program (OSP) estimates (1990-2001). The historical recreational removals for 1971, 1974, and 1979 were not available and were filled in as the average of the two preceding and two following years. Historical data were filtered to marine catch areas 1-4. For OSP catch estimates, data included marine catch areas 1-4, up to the Bonilla-Tatoosh line. WDFW also provided updated catch estimates for 2002-2004, which did not include discard mortality. To adjust for this, we multiplied the average mortality rate from the following five years (2005-2009) by the total discards to calculate total mortality for those years.  
+Recreational removals from [RecFIN](www.recfin.org) were updated for California, Oregon and Washington from 2017 - 2024. RecFIN removals include an estimate of discard mortality and represent total estimated removals. The Oregon Department of Fish and Wildlife (ODFW) provided updated historical recreational removals for Oregon from 1979 through 2000(@Whitman_2024). The Washington Department of Fish and Wildlife (WDFW) provided updated historical recreational removals (1967-1989) and WDFW Ocean Sampling Program (OSP) estimates (1990-2001). The historical recreational removals for 1971, 1974, and 1979 were not available and were filled in as the average of the two preceding and two following years. Historical data were filtered to marine catch areas 1-4. For OSP catch estimates, data included marine catch areas 1-4, up to the Bonilla-Tatoosh line. WDFW also provided updated catch estimates for 2002-2004, which did not include discard mortality. To adjust for this, we multiplied the average mortality rate from the following five years (2005-2009) by the total discards to calculate total mortality for those years.  
 
 ### Fishery-Dependent Length and Age Compositions {#sec-fd_comps}
 
@@ -51,33 +51,33 @@ Updated length composition data for commercial catches (trawl and non-trawl) wer
 
 New commercial age composition data from PacFIN and WDGCOP for 2017-2024 was included for Oregon and Washington. No new commercial age data were available from California. New recreational age composition data was available from RecFIN from 2017 - 2024 for Washington only (extracted May 13, 2025). These data were collected in the WDFW Ocean Sampling Program (OSP). There were also some historical updates to Oregon and Washington recreational age data provided by the state representatives.
 
-In combining the new data with the 2017 assessment data, we applied some general processes and fixed minor data entry mistakes found in the old assessment data file. For length composition data, years with small samples sizes (N = 1) were excluded. There were no changes in how commercial length sample numbers were calculated. However, all recent recreational fleet length data were missing the total number of trips information used to calculate the number of samples. Using data from the 2017 assessment, we built fleet-specific linear regressions to approximate the relationship of samples to the number of fish. Then, we applied that regression to the total number of fish for data between 2017 and 2024 to estimate the number of samples. A future benchmark assessment should investigate how to get the number of sampled trips from RecFIN to calculate the number of samples using the @stewart_bootstrapping_2014 method.
+In addition to extending the length data time series, we also fixed minor data errors found in the 2017 assessment. For length composition data, years with small samples sizes (N = 1) were excluded. There were no changes in how commercial length sample numbers were calculated. However, all recent recreational fleet length data were missing the total number of trips information used to calculate the number of samples. Using data from the 2017 assessment, we built fleet-specific linear regressions to approximate the relationship of samples to the number of fish. Then, we applied that regression to the total number of fish for data between 2017 and 2024 to estimate the number of samples. A future benchmark assessment should investigate how to get the number of sampled trips from RecFIN to calculate the number of samples using the @stewart_bootstrapping_2014 method.
 
 We also found that conditional-age-at-length (CAAL) data from the 2017 assessment had all sample sizes and relative proportions doubled, potentially from when Yelloweye Rockfish was changed from a two-sex to single-sex model. For most fleets this was not a problem because the proportions of age-at-length counts were the same, however, some of the commercial fleets included discard age proportions that were not doubled, leading to small differences in proportions. To fix the CAAL data so it accurately represented the number of fish in each age class, we either rebuilt the entire fleet’s CAAL data frame using the most recently pulled information from PacFIN and RecFIN, or divided the number of samples or relative proportions in each length bin by two. How these problems were treated for each fleet specifically is detailed below, including other minor data changes. Otherwise, length and age composition data are unchanged from the previous assessment; please refer to the most recent benchmark assessment [@gertseva_stock_2017] for additional information. 
 
 #### Fleet Specific Changes in the Compositional Data
 
-Fleet 2. California Non-Trawl
+Fleet 2. California Non-Trawl:
 
 - For ages, all the CAAL and marginal ages (used to explore fits only, not included in the likelihood) data were recalculated using the most recent age data pulled from PacFIN and WCGOP, to account for age doubling in 2017.
 
-Fleet 3. California Recreational
+Fleet 3. California Recreational:
 
-- CAAL data for 1979-1984 were doubled, so the number of samples and ages in each length bin was divided by two.
-- CAAL data for 2009-2016 were doubled, but the raw data we received from RecFin were correct, without doubled ages, so this time series was replaced with newly pulled data. 
+- CAAL data for 1979-1984 were doubled, so the number of samples and age-at-length proportions were divided by two.
+- CAAL data for 2009-2016 were doubled, but the raw data we received from RecFIN were correct, without doubled ages, so this time series was replaced with newly pulled data. 
 - We then re-built the marginal age data from the updated CAAL for both time periods because there were errors in previous data entry and sample number calculations.
 
-Fleet 4. Oregon/Washington Trawl & Fleet 5. Oregon/Washington Non-Trawl
+Fleet 4. Oregon/Washington Trawl & Fleet 5. Oregon/Washington Non-Trawl:
 
-- Both the OR/WA commercial fleets had all CAAL and marginal age (not incldued in the likelihood) data recalculated using the most recent age data pulled from PacFIN and WCGOP, to account for age doubling in the 2017 assessment.
+- Both the OR/WA commercial fleets had all CAAL and marginal age (not included in the likelihood) data recalculated using the most recent age data pulled from PacFIN and WCGOP, to account for age doubling in 2017.
 
-Fleet 6. Oregon Recreational
+Fleet 6. Oregon Recreational:
 
-- CAAL data sample sizes were doubled so numbers from 1979 - 2017 were divided by two. 
+- CAAL data sample sizes and proportions were doubled so numbers from 1979 - 2017 were divided by two. 
 - We included 2015 unsexed ages. 
-- We also reassigned the aging error for this fleet for the correct years. The ODFW data representative confirmed that all fish from 1979-2002 were aged by WDFW (ageing error 1), and fish from 2009-2016 were aged by the NWFSC (ageing error 2). No new ages since 2016 were provided. Data were then recalculated from the updated CAAL so that the ageing error labels and number of samples matched.
+- We also reassigned the aging error for this fleet for the correct years. The ODFW data representative confirmed that all fish from 1979-2002 were aged by WDFW (ageing error 1), and fish from 2009-2016 were aged by the NWFSC (ageing error 2). No new ages since 2016 were provided. Marginal data were then recalculated from the updated CAAL so that the ageing error labels and number of samples matched.
 
-Fleet 7. Washington Recreational
+Fleet 7. Washington Recreational:
 
 - All age data from 1998 to 2024 were replaced with the most recent data provided in RecFIN, following the recommendation of the WDFW representative. CAAL and the marginal age data were calculated using this data.
 
@@ -89,7 +89,7 @@ Two fishery-dependent indices of abundance were updated with new data and up-to-
 
 The Oregon Onboard Observer (now Ocean Recreational Fisheries Survey, or ORFS) index was updated from the previous Yelloweye Rockfish assessment, and updated drift-level catch-per-unit-effort data was obtained from ODFW through the end of 2024. The database contains information on catch by species (number of retained and released fish), effort (angler hours), sample depth, and bag limits and other relevant regulations [@monk_documentation_2013].  
 
-The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include drifts without data needed for CPUE information, long drifts (above 95th percentile), drifts in deeper waters (more than 64fm, 99th percentile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fm buffer). Additionally, years with extremely low sample sizes (<50) were excluded. Finally, drifts on charters from Port Orford were removed due to small sample sizes. The final filtered dataset included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish [@tbl-yelloweye_percent_pos_ORFS]. 
+The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include drifts without data needed for CPUE information, long drifts (above 95th percentile), drifts in deeper waters (more than 64fm, 99th percentile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fm buffer). Additionally, years with extremely low sample sizes (<50) were excluded. Finally, drifts on charters from Port Orford were removed due to small sample sizes. The final filtered data set included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish [@tbl-yelloweye_percent_pos_ORFS]. 
 
 Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using sdmTMB (version 0.6.0; @Anderson_2024_SRP) to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC [@tbl-yelloweye_model_selection_ORFS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in sdmTMB (@fig-orfs_qqplot). The index of abundance is shown in @fig-ORFS_index. A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed [@fig-ORFS_comp]. The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013) relative to the index from 2017.
 
@@ -97,7 +97,7 @@ Covariates evaluated included year, month, port, the open depths to fishing (all
 
 The Ocean Recreational Boat Survey (ORBS) dockside index for Oregon was updated for this assessment. CPUE, expressed in terms of fish per angler-hour, was calculated by multiplying the number of anglers and the total trip time, minus the boat type-specific travel time. The database contains information on released fish by species (number of angler-reported released fish), effort (angler hours), sample location (port where data were collected), date, bag limits and other relevant regulations, boat type (charter or private), and trip type (e.g., bottom associated fish). 
 
-The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to ORBS trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. First, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips from 2004 – 2024 with an overall encounter rate of 7.4% [@tbl-yelloweye_percent_pos_ORBS].
+The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous Yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to ORBS trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. First, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for Yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips from 2004 – 2024 with an overall encounter rate of 7.4% [@tbl-yelloweye_percent_pos_ORBS].
 
 Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 ORBS index, apart from the open depths of the fishery. The final model in 2017 included boat type, port and year. Negative binomial models were fit in sdmTMB (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series [@tbl-yelloweye_model_selection_ORBS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in sdmTMB.(@fig-orbs_qq). The index of abundance in shown in @fig-ORBS_index. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for PFMC groundfish assessments (sdmTMB, version 0.6.0; @Anderson_2024_SRP). To bridge this change, the 2017 model index structure was applied to the current dataset using sdmTMB and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two sdmTMB indices; however, this appears to be largely driven by the updated modeling approach.
 
