--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -304,7 +304,7 @@
 Perl \and Alison Whitman \and Matheus de Barros \and Juliette
 Champagnat \and Abby Schamp \and Samantha Schiano \and Fabio Prior
 Caltabellotta}
-\date{2025-05-18}
+\date{2025-05-19}
 
 \begin{document}
   \begin{titlepage}
@@ -522,8 +522,30 @@ the Department of Commerce.
 \subsection*{Stock}\label{stock}
 \addcontentsline{toc}{subsection}{Stock}
 
+Yelloweye Rockfish (\emph{Sebastes ruberrimus}) are found from the Gulf
+of Alaska to northern Baja California in Mexico across the northeastern
+Pacific Ocean. Their core distribution is from southeast Alaska to
+central California on the west coast of the United States. Yelloweye
+Rockfish are strongly associated with rocky bottom habtiat and adults
+are considered to be solitary and sedentary after settlement. Given the
+general perception of the sedentary nature of Yelloweye Rockfish adults
+and the moderate amount of mixing that occurs during the pelagic larval
+stage, the previous Yelloweye Rockfish assessment modeled the West coast
+population as a two-area assessment (California and a combined
+Oregon-Washington area) with a common stock recruitment relationship.
+This update assessment maintains this basic structure.
+
 \subsection*{Catches}\label{catches}
 \addcontentsline{toc}{subsection}{Catches}
+
+Catches for Yelloweye Rockfish have averaged over 20 mt in recent years
+(Figure~\ref{fig-es-landings}, Table~\ref{tbl-es-catches} \textbf{not
+sure if correct table?}). Yelloweye Rockfish was declared overfished in
+2002 and remains under a rebuilding plan that substantially limits
+catch. However, as other rockfish stocks have rebuilt and Yelloweye
+Rockfish has progressed under it's rebuilding plan, catches have slowly
+increased in recent years, primarily in the Oregon-Washington non-trawl
+fleet and the recreational fleets.
 
 \begingroup
 \fontsize{9.0pt}{10.8pt}\selectfont
@@ -564,12 +586,45 @@ Year & 1\_CA\_TWL (mt) & 2\_CA\_NONTWL (mt) & 3\_CA\_REC (mt) & 4\_ORWA\_TWL (mt
 
 \endgroup
 
+\begin{figure}
+
+\centering{
+
+\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/catch2_landings_stacked.png}
+
+}
+
+\caption{\label{fig-es-landings}Landings in metric tons (mt) by year for
+each fleet.}
+
+\end{figure}%
+
+\clearpage
+
 \subsection*{Data and Assessment}\label{data-and-assessment}
 \addcontentsline{toc}{subsection}{Data and Assessment}
+
+The last assessment for Yelloweye Rockfish occurred in 2017. This update
+assessment extends the data used in the 2017 assessment through 2024.
+Data includes catch, length and age data from seven fishery fleets and
+multiple indices of abundance in California and Oregon/Washington. Two
+new historical catch reconstructions from Oregon and Washington were
+incorporated. Four indices of abundance were updated for this
+assessment, including two recreational fishery indices in Oregon, the
+West Coast Groundfish Bottom Trawl Survey, and the IPHC longline survey.
+In addition, sample sizes and assignment of aging error were corrected
+in the compositional data. No new data were considered in this update
+assessment.
 
 \subsection*{Stock biomass and
 dynamics}\label{stock-biomass-and-dynamics}
 \addcontentsline{toc}{subsection}{Stock biomass and dynamics}
+
+The model estimates that the stock was below the minimum stock size
+threshold in the late 1990s and was lowest in the early 2000s before
+increasing over the last 20 years (Figure~\ref{fig-es-sb}). The 2024
+relative estimated spawning output is just below the management target
+threshold.
 
 \begingroup
 \fontsize{9.0pt}{10.8pt}\selectfont
@@ -601,6 +656,21 @@ Year & Spawning output & Lower Interval (mt) & Upper Interval (mt) & Fraction Un
 \end{longtable}
 
 \endgroup
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts9_Relative_spawning_output_intervals.png}
+
+}
+
+\caption{\label{fig-es-sb}Estimated time series of relative spawning
+output for the base model.}
+
+\end{figure}%
+
+\clearpage
 
 \subsection*{Recruitment}\label{recruitment}
 \addcontentsline{toc}{subsection}{Recruitment}
@@ -635,6 +705,8 @@ Year & Recruitment (1,000s) & Lower Interval (1,000s) & Upper Interval (1,000s) 
 \end{longtable}
 
 \endgroup
+
+\clearpage
 
 \subsection*{Exploitation status}\label{exploitation-status}
 \addcontentsline{toc}{subsection}{Exploitation status}
@@ -716,6 +788,8 @@ MSY (mt) & 121 & 106 & 136 \\
 \end{longtable}
 
 \endgroup
+
+\clearpage
 
 \subsection*{Management performance}\label{management-performance}
 \addcontentsline{toc}{subsection}{Management performance}
@@ -800,6 +874,8 @@ Year & Adopted OFL (mt) & Adopted ACL (mt) & Assumed Catch (mt) & OFL (mt) & Buf
 \endgroup
 
 \end{landscape}
+
+\clearpage
 
 \subsection*{Decision table}\label{decision-table}
 \addcontentsline{toc}{subsection}{Decision table}
@@ -911,6 +987,8 @@ ADW - decision tables not needed until after review
 
 \subsection*{Rebuilding projections}\label{rebuilding-projections}
 \addcontentsline{toc}{subsection}{Rebuilding projections}
+
+\newpage{}
 
 \newpage{}
 
@@ -1972,18 +2050,122 @@ Uncertainties}\label{unresolved-problems-and-major-uncertainties}
 
 \subsection{Reference Points}\label{reference-points-1}
 
+This assessment estimates that the stock of Yelloweye Rockfish off the
+continental U.S. Pacific Coast is currently at \textbf{XXX\%} of its
+unexploited level. This is above the overfished threshold of SB25\%, but
+below the management target of SB40\% of unfished spawning biomass. Both
+areas are above the overfished level of 25\%. The assessment estimates
+that the coastwide spawning output of Yelloweye Rockfish dropped below
+the SB40\% target for the first time in 1986 and below the overfished
+SB25\% threshold in 1993, as a result of intense fishing by commercial
+and recreational fleets. It continued to decline and reached 14.2\% of
+its unfished output in 2000 (\textbf{Table XX}). The same year, the
+stock was declared overfished. Since then, the spawning output has
+slowly increased due to management regulations implemented to foster
+stock rebuilding.
+
+Reference points for the base model are summarized in \textbf{Table XX}.
+Unfished spawning stock output for Yelloweye Rockfish was estimated to
+be \textbf{XXXX} million eggs (95\% confidence interval:
+\textbf{XXXX-XXXX} million eggs). The stock is declared overfished if
+the current spawning output is estimated to be below the minimum stock
+size threshold (MSST) of 25\% of unfished level (SB25\%). The management
+target for Yelloweye Rockfish is defined as 40\% of the unfished
+spawning output (SB40\%), which is estimated by the model to be
+\textbf{XXX} million eggs (95\% confidence interval: \textbf{XXX-XXX}),
+which corresponds to an exploitation rate of 0.025. This harvest rate
+provides an equilibrium yield of \textbf{XXX} mt at SB40\% (95\%
+confidence interval: \textbf{XX-XXX} mt). The model estimate of maximum
+sustainable yield (MSY) is \textbf{XXX} mt (95\% confidence interval:
+\textbf{XXX-XXX} mt). The estimated spawning stock output at MSY is
+\textbf{XXX} million eggs (95\% confidence interval: XXX-XXX million
+eggs). The exploitation rate corresponding to the estimated SPRMSY of
+F36\% is 0.034.
+
+This assessment estimates that the 2024 SPR is \textbf{XX\%}. The SPR
+used for setting the OFL is 50\%, while the SPR-based management fishing
+mortality target \textbf{specified in the current rebuilding plan and
+used to determine the ACL is 76\%. Relative exploitation rates
+(calculated as catch/biomass of age-8 and older fish) are estimated to
+have been below 1\% during the last decade}. This assessment estimates
+that Yelloweye Rockfish was fished beyond the relative SPR ratio
+(calculated as 1-SPR/1-SPRTarget=0.5) between 1977 and 2000. The
+equilibrium yield curve is shown in \textbf{Figure XX}.
+
 \subsection{Harvest Projections and Decision
 Tables}\label{harvest-projections-and-decision-tables}
 
-ADW - Decision tables not required for draft assessment.
+The base model estimate for 2025 spawning depletion is \textbf{XX\%}.
+The primary axis of uncertainty about this estimate used in the decision
+table was based on natural mortality. Natural mortality in the
+assessment model is fixed at the median of the Hamel prior (0.044 y-1),
+estimated using the maximum age of 123 years. Natural mortality value
+for high state of nature was calculated to correspond to 97 years of
+age, which is the 99th percentile of the age data available for the
+assessment; this value was 0.056 y-1. The natural mortality value for
+low state of nature was calculated to correspond to 147 years of age,
+which is the maximum age reported for the Yelloweye Rockfish; this value
+was 0.037 y-1.
+
+\textbf{We explored different approaches to identify alternative natural
+mortality values, including using the 12.5 and 87.5 percentiles of the
+Hamel prior distribution. However, this approach yielded values that
+were considered to be not realistic. For instance, the 12.5 percentile
+value of 0.031y-1 corresponded to an age of 175 years, which
+substantially exceeds the oldest Yelloweye Rockfish individual ever
+reported.}
+
+Twelve-year forecasts for each state of nature were calculated for two
+catch scenarios (\textbf{Table XX}). One scenario assumes 2025-2026
+catches to be 60\% of year-specific ACL values, and 2027-2036 catches to
+be 60\% of removals calculated using current rebuilding SPR of 76\%
+applied to the base model. The second catch scenario assumes 2025-2026
+removals to be equal to year-specific ACLs, and 2027-2036 catches
+calculated using current rebuilding SPR of 76\% applied to the base
+model.
 
 \subsection{Evaluation of Scientific
 Uncertainty}\label{evaluation-of-scientific-uncertainty}
 
+The model estimated uncertainty around the 2025 spawning biomass for the
+model \textbf{is 𝜎 = XX}. The uncertainty around the OFL in 2025
+\textbf{is 𝜎 = XX}. Each of these are likely underestimates of overall
+uncertainty due to the necessity to fix several key population dynamics
+parameters (e.g., steepness, recruitment variance) and also because
+there is no explicit incorporation of model structural uncertainty
+(although see the decision table for alternative states of nature).
+
 \subsection{Regional management
 considerations}\label{regional-management-considerations}
 
+Yelloweye Rockfish is modelled in two areas (California and
+Oregon-Washington) in this assessment. Current population status does
+differ by area and may be valuable information for making management and
+allocation decisions (\textbf{ts10\_Relative\_spawning\_output}).
+
 \subsection{Research and Data Needs}\label{research-and-data-needs-1}
+
+Please refer to the 2017 benchmark assessment for a detailed list of
+research and data needs for Yelloweye Rockfish (\textbf{cite last
+assessment}). In addition to those, the following research and
+recommendations could improve the ability of future stock assessments to
+determine the status and productivity of the Yelloweye Rockfish
+population:
+
+\begin{itemize}
+\tightlist
+\item
+  USE ONLY ONE INDEX FOR OR REC (CHOOSE ORFS?) and refinement of the
+  ORFS index analysis. Choosing orfs over orbs because it's a longer
+  time period and orfs and orbs sample the same fishery.
+\item
+  Continue using the methods that we developed for the IPHC index (using
+  sdmTMB).
+\item
+  In the model structure, consider expanding age bins for the IPHC data
+  to capture the population dynamics of a long-lived species. (max age
+  in model?) (max age in data)?
+\end{itemize}
 
 \newpage{}
 
